# Spider

./: .gitignore  CMakeLists.txt  parserFileSettingsIni.cpp  parserFileSettingsIni.h  settings.ini
Database/: dataBase.cpp  dataBase.h  dataBaseWorker.cpp  dataBaseWorker.h
httpClient/: CMakeLists.txt  httpClient.cpp  httpClient.h  indexer.h  pickOutLinks.h  removeHTMLTags.h  sharedAddress.h  uniqueLinks.h  urlAddress.h
httpServer/: CMakeLists.txt
